# freemail

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
public/assets/: inbox.css  style.css
public/assets/css/: dark.css  inbox.css  style.css
src/: main.rs
